--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.3.2
   get_it: ^7.7.0
   http: ^1.2.2
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
