--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   pinput: ^5.0.0
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
+  flutter_localization: ^0.2.2
 
 dev_dependencies:
   flutter_test:
