--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
   flutter_localization: ^0.2.2
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
