--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_localization: ^0.2.2
   flutter_localizations:
     sdk: flutter
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
