--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
     sdk: flutter
   percent_indicator: ^4.2.3
   chat_bubbles: ^1.6.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
