--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   percent_indicator: ^4.2.3
   chat_bubbles: ^1.6.0
   qr_code_scanner: ^1.0.1
+  flutter_sound: ^9.6.0
+  path_provider: ^2.1.4
+  audio_waveforms: ^1.0.5
 
 dev_dependencies:
   flutter_test:
