--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_sound: ^9.6.0
   path_provider: ^2.1.4
   audio_waveforms: ^1.0.5
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
