added app theme cubit

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,7 +14,9 @@ android {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
-
+    lintOptions {
+        warning 'deprecation'
+    }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
@@ -29,7 +31,14 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
