--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,10 @@ flutter:
       fonts:
         - asset: assets/fonts/Bayon-Regular.ttf
 
+    - family: Londrina Shadow
+      fonts:
+        - asset: assets/fonts/LondrinaShadow-Regular.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
   
