--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image_picker: ^1.1.2
   country_code_picker: ^3.0.0
   adaptive_theme: ^3.6.0
+  easy_localization: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/translation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
