Refactor whatsapp colors

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   country_code_picker: ^3.0.0
   adaptive_theme: ^3.6.0
   easy_localization: ^3.0.7
+  share_plus: ^10.0.2
 
 dev_dependencies:
   flutter_test:
